UnitTest for AccountTypeFlowImpl added